--- a/app/View/Themed/BaoBiGiay/webroot/css/main.css
+++ b/app/View/Themed/BaoBiGiay/webroot/css/main.css
@@ -2494,83 +2494,6 @@ fieldset[disabled] .btn-line.btn-metis-6.active {
 .bg-light .lter {
   background-color: #ffffff;
 }
-.bg-brillant {
-  background: url("../img/pattern/brillant.png") repeat;
-}
-.bg-always_grey {
-  background: url("../img/pattern/always_grey.png") repeat;
-}
-.bg-retina_wood {
-  background: url("../img/pattern/retina_wood.png") repeat;
-}
-.bg-low_contrast_linen {
-  background: url("../img/pattern/low_contrast_linen.png") repeat;
-}
-.bg-egg_shell {
-  background: url("../img/pattern/egg_shell.png") repeat;
-}
-.bg-cartographer {
-  background: url("../img/pattern/cartographer.png") repeat;
-}
-.bg-batthern {
-  background: url("../img/pattern/batthern.png") repeat;
-}
-.bg-noisy_grid {
-  background: url("../img/pattern/noisy_grid.png") repeat;
-}
-.bg-diamond_upholstery {
-  background: url("../img/pattern/diamond_upholstery.png") repeat;
-}
-.bg-greyfloral {
-  background: url("../img/pattern/greyfloral.png") repeat;
-}
-.bg-white_tiles {
-  background: url("../img/pattern/white_tiles.png") repeat;
-}
-.bg-gplaypattern {
-  background: url("../img/pattern/gplaypattern.png") repeat;
-}
-.bg-arches {
-  background: url("../img/pattern/arches.png") repeat;
-}
-.bg-purty_wood {
-  background: url("../img/pattern/purty_wood.png") repeat;
-}
-.bg-diagonal_striped_brick {
-  background: url("../img/pattern/diagonal_striped_brick.png") repeat;
-}
-.bg-large_leather {
-  background: url("../img/pattern/large_leather.png") repeat;
-}
-.bg-bo_play_pattern {
-  background: url("../img/pattern/bo_play_pattern.png") repeat;
-}
-.bg-irongrip {
-  background: url("../img/pattern/irongrip.png") repeat;
-}
-.bg-wood_1 {
-  background: url("../img/pattern/wood_1.png") repeat;
-}
-.bg-pool_table {
-  background: url("../img/pattern/pool_table.png") repeat;
-}
-.bg-crissXcross {
-  background: url("../img/pattern/crissXcross.png") repeat;
-}
-.bg-rip_jobs {
-  background: url("../img/pattern/rip_jobs.png") repeat;
-}
-.bg-random_grey_variations {
-  background: url("../img/pattern/random_grey_variations.png") repeat;
-}
-.bg-carbon_fibre {
-  background: url("../img/pattern/carbon_fibre.png") repeat;
-}
-/* BEGIN ERROR PAGES STYLES */
-body.error {
-  padding-top: 40px;
-  background: url("../img/pattern/always_grey.png") repeat rgba(68, 68, 68, 0.9);
-}
 body.error .logo h1 {
   color: #FFFFFF;
   font-size: 100px;
@@ -2582,3 +2505,17 @@ body.error .logo h1 {
   }
 }
 /* END ERROR PAGES STYLES */
+
+.form-horizontal .control-label{text-align: left;}
+.form-group {margin-bottom: 10px;}
+#menu li a:hover, #menu li a.active {
+    background: #999;
+    color: #fff;
+}
+#menu li ul {
+    display: none; // used to hide sub-menus
+}
+#menu li ul li a {
+    border-bottom: 1px dotted #ccc;
+}
+
