--- a/app/View/Themed/BaoBiGiay/webroot/css/main.css
+++ b/app/View/Themed/BaoBiGiay/webroot/css/main.css
@@ -2518,4 +2518,5 @@ body.error .logo h1 {
 #menu li ul li a {
     border-bottom: 1px dotted #ccc;
 }
-
+form .required label:after {color: #b94a48;content: ' *';display:inline;}
+label.required:before {color: #b94a48;content: '* ';display:inline;}
